--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -30,7 +30,7 @@
   }
   .loginFormContainer {
     padding: 15px;
-    margin: 5% auto 0;
+    margin:0 auto;
     background: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12);
