--- a/client/src/Components/PatientProfile/Subjective/subjective.css
+++ b/client/src/Components/PatientProfile/Subjective/subjective.css
@@ -16,6 +16,7 @@
     margin: 0px;
     padding: 0px; }
     .complain-box .bordered-layout ul li {
+      cursor: pointer;
       list-style: none;
       margin: 0px;
       padding: 0px; }
