--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -23,6 +23,7 @@
       padding: 0px;
 
       li {
+        cursor: pointer;
         list-style: none;
         margin: 0px;
         padding: 0px;
