--- a/client/src/Components/Radiology/RadScheduledList/RadScheduledList.css
+++ b/client/src/Components/Radiology/RadScheduledList/RadScheduledList.css
@@ -13,3 +13,6 @@
   .hptl-phase1-rad-work-list-form th,
   .hptl-phase1-rad-work-list-form td {
     border-right: 1px solid #e6e6e6; }
+
+.pat-code:hover {
+  text-decoration: underline; }
