--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -80,9 +80,34 @@
 
 .print-area .printImg {
   height: 36px;
-  margin-top: 20px;
-  padding-left: 0px;
   cursor: pointer; }
+
+.print-area .printMenuDisplay {
+  padding: 19px 9px; }
+
+.print-area .printMenuDisplay:hover .printActionMenu,
+.print-area .printImg:hover .printActionMenu {
+  display: block; }
+
+.print-area .printActionMenu {
+  cursor: pointer;
+  display: none;
+  box-shadow: -2px 3px 2px rgba(0, 0, 0, 0.3);
+  border-radius: 0 0 0 5px;
+  margin: 0;
+  padding: 0;
+  background: #ffffff;
+  right: 0;
+  top: 75px;
+  position: absolute;
+  overflow: hidden; }
+  .print-area .printActionMenu li {
+    list-style: none;
+    border-bottom: 1px solid #000;
+    padding: 15px; }
+
+.print-area .printActionMenu:hover {
+  display: block; }
 
 .third-position {
   padding-top: 0.4%; }
