--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -114,9 +114,38 @@
   }
   .printImg {
     height: 36px;
-    margin-top: 20px;
-    padding-left: 0px;
     cursor: pointer;
+  }
+  .printMenuDisplay {
+    padding: 19px 9px;
+  }
+  .printMenuDisplay:hover,
+  .printImg:hover {
+    .printActionMenu {
+      display: block;
+    }
+  }
+
+  .printActionMenu {
+    cursor: pointer;
+    display: none;
+    box-shadow: -2px 3px 2px rgba(0, 0, 0, 0.3);
+    border-radius: 0 0 0 5px;
+    margin: 0;
+    padding: 0;
+    background: #ffffff;
+    right: 0;
+    top: 75px;
+    position: absolute;
+    overflow: hidden;
+    li {
+      list-style: none;
+      border-bottom: 1px solid #000;
+      padding: 15px;
+    }
+  }
+  .printActionMenu:hover {
+    display: block;
   }
 }
 .third-position {
