UI changes, MY Day, Patient Profile, Subjective, Physical Examindation

--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
@@ -1,2 +1,11 @@
 .physical_examination {
+  .vitalTopFld15 {
+    width: 15%;
+  }
+  .vitalTopFld20 {
+    width: 20%;
+  }
+  .vitalTopFld25 {
+    width: 25%;
+  }
 }
