--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -3,8 +3,8 @@
   height: 70px;
   padding: 5px 0 0;
   width: 100%;
-  position: relative;
-  z-index: 1; }
+  position: fixed;
+  z-index: 999; }
   .patientProfile .patientInfo-Top div {
     float: left;
     color: #858585; }
@@ -97,7 +97,10 @@
   width: 100%;
   color: #797979;
   font-size: 1rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  position: fixed;
+  top: 120px;
+  z-index: 99; }
   .patientProfile .patientTopNav ul {
     position: relative; }
     .patientProfile .patientTopNav ul li span {
@@ -136,7 +139,7 @@
         background: #53bdb1;
         z-index: 9;
         padding: 10px;
-        border-radius: 0 0 0 5px;
+        border-radius: 5px;
         color: #fff;
         display: none; }
     .patientProfile .patientTopNav .patient-quick-info li:hover {
@@ -148,3 +151,8 @@
       .patientProfile .patientTopNav .patient-quick-info li:hover span {
         color: #fff;
         display: block; }
+
+.patientProfile .patientContentArea {
+  margin: 100px 10px 0;
+  z-index: 1;
+  width: 100%; }
