--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -65,7 +65,11 @@
     padding: 5px;
     font-size: 20px;
     height: 49px;
-    background: #000; }
+    background: #000;
+    position: fixed;
+    width: 100%;
+    z-index: 9;
+    border-bottom: 1px solid #3e3e3e; }
   .hptl-phase1-sideMenuBar .sideBarClose {
     width: 25px;
     height: 25px;
