--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.css
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.css
@@ -16,13 +16,13 @@
     float: none;
     margin: 4px auto 2px; }
   .doctor_workbench .my-calendar .myDay_date input {
-    border: 1px solid #2a9a9e;
-    background: #00afa4;
-    border-radius: 5px;
+    border: 1px solid #1d887f;
     color: #fff;
-    font-size: 13px;
-    padding: 2px 5px;
-    text-align: center; }
+    background: #28a59a;
+    font-size: 17px;
+    padding: 1px;
+    text-align: center;
+    border-radius: 3px; }
   .doctor_workbench .my-calendar .arrow-box {
     width: 60px;
     cursor: pointer; }
@@ -58,6 +58,11 @@
   list-style: none;
   height: 65vh;
   overflow: auto; }
+  .doctor_workbench .opPatientList .opList .noPatientDiv {
+    margin-top: 15%;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #929292; }
   .doctor_workbench .opPatientList .opList li {
     margin: 4px 0;
     padding: 3px 0;
@@ -229,6 +234,20 @@
     padding-right: 10px;
     padding-top: 5px;
     font-style: bolder; }
+
+.doctor_workbench .encounters-panel .rightLabelCount {
+  float: right; }
+  .doctor_workbench .encounters-panel .rightLabelCount .countNo {
+    background: #2aafa4;
+    color: #fff;
+    padding: 2px 10px;
+    border-radius: 25%;
+    font-size: 0.8rem;
+    margin-left: 3px;
+    display: inline-block; }
+  .doctor_workbench .encounters-panel .rightLabelCount .style_Label {
+    font-size: 0.8rem;
+    text-transform: initial; }
 
 .testColor {
   background-color: #acffc0 !important; }
