--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -22,13 +22,13 @@
     }
 
     .myDay_date input {
-      border: 1px solid #2a9a9e;
-      background: #00afa4;
-      border-radius: 5px;
+      border: 1px solid #1d887f;
       color: #fff;
-      font-size: 13px;
-      padding: 2px 5px;
+      background: #28a59a;
+      font-size: 17px;
+      padding: 1px;
       text-align: center;
+      border-radius: 3px;
     }
 
     .arrow-box {
@@ -90,6 +90,12 @@
       list-style: none;
       height: 65vh;
       overflow: auto;
+      .noPatientDiv {
+        margin-top: 15%;
+        text-align: center;
+        font-size: 0.9rem;
+        color: #929292;
+      }
       li {
         margin: 4px 0;
         padding: 3px 0;
@@ -315,6 +321,24 @@
       padding-right: 10px;
       padding-top: 5px;
       font-style: bolder;
+    }
+  }
+  .encounters-panel {
+    .rightLabelCount {
+      float: right;
+      .countNo {
+        background: #2aafa4;
+        color: #fff;
+        padding: 2px 10px;
+        border-radius: 25%;
+        font-size: 0.8rem;
+        margin-left: 3px;
+        display: inline-block;
+      }
+      .style_Label {
+        font-size: 0.8rem;
+        text-transform: initial;
+      }
     }
   }
 }
