--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -8,26 +8,66 @@
   }
 }
 
+.pain_slider {
+  margin: 0;
+  margin-top: 10px;
+  background: #f2f2f2;
+  border: 1px solid #c1c1c1;
+  padding-bottom: 8px;
+}
 .complain-box {
+  .Select-placeholder {
+    width: 100%;
+    padding: 0 5px;
+    border: 1px solid #c1c1c1;
+    border-radius: 5px 5px 0 0;
+  }
+  .displayInlineBlock {
+    display: inline-block;
+  }
   .bordered-layout {
-    margin-top: 5px;
-    border: 1px;
-    border-style: solid;
-    border-color: gray;
-    height: 200px;
+    border: 1px solid #c1c1c1;
+    min-height: 70px;
+    max-height: 150px;
     overflow: auto;
-    border-radius: 10px;
+    border-radius: 0 0 5px 5px;
 
     ul {
       margin: 0px;
       padding: 0px;
 
       li {
-        cursor: pointer;
+        cursor: progress;
         list-style: none;
         margin: 0px;
-        padding: 0px;
+        padding: 5px;
+        font-size: 0.85rem;
       }
+      li:nth-child(odd) {
+        background: #f2f2f2;
+      }
+      li:nth-child(even) {
+        background: #ffffff;
+      }
+      li:nth-child(odd):hover,
+      li:nth-child(even):hover {
+        background: #eafffd;
+      }
+    }
+  }
+}
+
+.durationCntr {
+  .divDur {
+    width: 30%;
+    margin-right: 4px;
+    display: inline-block;
+  }
+  .divDay {
+    width: 60%;
+    display: inline-block;
+    .Select-input {
+      height: 30px;
     }
   }
 }
