--- a/client/src/index.css
+++ b/client/src/index.css
@@ -314,9 +314,6 @@
     :global .pain-scale-ul .active {
       border-radius: 100%;
       box-shadow: 0 3px 8px #00000063; }
-  :global .pain_slider {
-    max-width: 350px;
-    margin: 10px; }
   :global .algaeh-modal {
     margin: 3% auto 0;
     background-color: #fff;
@@ -330,22 +327,23 @@
       padding: 5px 16px; }
       :global .algaeh-modal .popupHeader h4 {
         color: #fff;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         padding: 0 0 3px;
         line-height: 30px;
-        margin: 0; }
+        margin: 0;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
     :global .algaeh-modal .popupInner {
       height: 70vh;
       overflow-y: auto;
       overflow-x: hidden; }
       :global .algaeh-modal .popupInner .popLeftDiv {
         border-right: 1px dashed #e0e0e0;
-        height: 60vh;
+        height: 70vh;
         overflow: auto;
         padding: 15px; }
       :global .algaeh-modal .popupInner .popRightDiv {
         border-right: 1px dashed #e0e0e0;
-        height: 60vh;
+        height: 70vh;
         overflow: auto;
         padding: 15px; }
     :global .algaeh-modal .popupFooter {
