--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -432,10 +432,6 @@ $forntSize: 0.7rem;
     }
   }
 
-  .pain_slider {
-    max-width: 350px;
-    margin: 10px;
-  }
 
   .algaeh-modal {
     margin: 3% auto 0;
@@ -450,11 +446,12 @@ $forntSize: 0.7rem;
       background: #dbad64;
       padding: 5px 16px;
       h4 {
-        color: #fff;
-        font-size: 1.2rem;
-        padding: 0 0 3px;
-        line-height: 30px;
-        margin: 0;
+     color: #fff;
+     font-size: 1.1rem;
+     padding: 0 0 3px;
+     line-height: 30px;
+     margin: 0;
+     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
       }
     }
     .popupInner {
@@ -463,12 +460,12 @@ $forntSize: 0.7rem;
       overflow-x: hidden;
       .popLeftDiv{
         border-right: 1px dashed #e0e0e0;
-        height: 60vh;
+        height: 70vh;
         overflow: auto;
         padding: 15px;
       }.popRightDiv{
         border-right: 1px dashed #e0e0e0;
-        height: 60vh;
+        height: 70vh;
         overflow: auto;
         padding: 15px;
       }
