--- a/client/src/Components/PatientProfile/Assessment/assessment.scss
+++ b/client/src/Components/PatientProfile/Assessment/assessment.scss
@@ -5,5 +5,6 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    text-align: center;
   }
 }
