--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -102,6 +102,7 @@ div[numberbox="true"] {
       vertical-align: middle;
       white-space: nowrap;
       font-size: 0.75rem;
+      text-align: center;
     }
   }
   thead {
@@ -121,6 +122,7 @@ div[numberbox="true"] {
         font-size: 0.75rem;
         font-weight: bold;
         text-transform: uppercase;
+        text-align: center;
       }
     }
   }
