--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -62,10 +62,6 @@
       padding-right: 3px;
       padding-left: 3px;
     }
-    .calendar .col .selectedDate {
-      background: #009e94;
-    }
-
     .calendar .col:hover {
       background: #009e94;
       cursor: pointer;
@@ -80,6 +76,10 @@
     }
     .activeDate {
       border-bottom: 4px solid yellow !important;
+      background: #009e94;
+    }
+    .CurrentDate {
+      border-top: 2px solid yellow !important;
     }
   }
 
