--- a/client/src/Components/RegistrationPatient/registration.css
+++ b/client/src/Components/RegistrationPatient/registration.css
@@ -19,3 +19,33 @@
     background-color: #292929 !important;
     left: 0px;
     width: 250px; }
+
+.hptl-phase1-footer button {
+  float: right;
+  margin-left: 10px;
+  padding: 5px 10px;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  min-width: 70px; }
+
+.hptl-phase1-footer .btn-primary {
+  background: #34b8bc;
+  color: #fff;
+  border: 1px solid #34b8bc; }
+
+.hptl-phase1-footer .btn-default {
+  background: #efefef;
+  color: #797979;
+  border: 1px solid #efefef; }
+
+.hptl-phase1-footer .btn-other {
+  background: none;
+  color: #fff;
+  border: 1px solid #efefef; }
+
+.hptl-phase1-footer .btn-primary:hover,
+.hptl-phase1-footer .btn-default:hover,
+.hptl-phase1-footer .btn-other:hover {
+  background: #239296;
+  color: #fff;
+  border: 1px solid #239296; }
