--- a/client/src/index.css
+++ b/client/src/index.css
@@ -343,6 +343,14 @@
         line-height: 30px;
         margin: 0;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
+      :global .algaeh-modal .popupHeader label {
+        color: #fff;
+        font-size: 1.1rem;
+        padding: 0 0 3px;
+        line-height: 30px;
+        margin: 0;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        font-weight: bold; }
     :global .algaeh-modal .popupInner {
       height: 70vh;
       overflow-y: auto;
