--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -470,6 +470,15 @@ $forntSize: 0.7rem;
         margin: 0;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
       }
+      label {
+        color: #fff;
+        font-size: 1.1rem;
+        padding: 0 0 3px;
+        line-height: 30px;
+        margin: 0;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        font-weight: bold;
+      }
     }
     .popupInner {
       height: 70vh;
