Added Radiology Result entry and done changes in radiology apis and work list

--- a/client/src/Components/Radiology/RadResultEntry/RadResultEntry.css
+++ b/client/src/Components/Radiology/RadResultEntry/RadResultEntry.css
@@ -89,3 +89,9 @@
     .patientInfo-Top .moreAction i {
       display: block;
       margin-bottom: 5px; }
+
+.form-group {
+  padding-top: 5px; }
+
+.editor .quill .ql-container {
+  min-height: 60vh; }
