--- a/client/src/index.css
+++ b/client/src/index.css
@@ -619,3 +619,37 @@
     :global .portletHeader label {
       font-weight: 500;
       font-size: 0.9rem; }
+
+.tab-container .tab-button {
+  font-size: 0.7rem;
+  font-weight: normal;
+  border-radius: 7px 7px 0 0;
+  background-color: #f3f3f3;
+  border: solid 1px #d0d8dc;
+  color: #7c909b;
+  padding: 6px 10px;
+  cursor: pointer; }
+  .tab-container .tab-button:hover {
+    background-color: #fff !important;
+    color: #68509f !important;
+    cursor: pointer; }
+  .tab-container .tab-button:focus {
+    outline: none; }
+  .tab-container .tab-button.active {
+    background-color: #dbad64;
+    color: #fff;
+    border: solid 1px #dbad64;
+    pointer-events: none; }
+    .tab-container .tab-button.active:hover {
+      background-color: #dbad64 !important;
+      color: #fff !important; }
+
+.tab-container .tab {
+  margin-right: -30px; }
+
+.tab-container .tab-content {
+  padding: 10px 20px;
+  background-color: #fcfcfc;
+  border: solid 1px #eceff1; }
+  .tab-container .tab-content .tab-item {
+    position: relative; }
