--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -1,6 +1,5 @@
 div[numberbox="true"] input[type="text"] {
-  text-align: right !important;
-}
+  text-align: right !important; }
 
 .DayPickerInput input {
   font: inherit;
@@ -13,8 +12,7 @@ div[numberbox="true"] input[type="text"] {
   vertical-align: middle;
   -webkit-tap-highlight-color: transparent;
   background-color: #fbfbfb;
-  min-width: 100%;
-}
+  min-width: 100%; }
 
 .report-section {
   border: 1px solid #d3d3d3;
@@ -22,89 +20,71 @@ div[numberbox="true"] input[type="text"] {
   margin-top: 0px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-}
+  border-top-right-radius: 5px; }
 
 /*
    React date picker customizing style
 */
 .algaeh-datePicker {
   border: 1px solid #d3d3d3;
-  border-radius: 4px;
   max-width: 100%;
-  padding-left: 6px;
-}
-.algaeh-datePicker .react-date-picker__button {
-  border: none;
-  line-height: 1.94em;
-}
-.algaeh-datePicker .react-date-picker {
-  width: 100%;
-}
-.algaeh-datePicker .react-date-picker__button {
-  width: 100%;
-}
-.algaeh-datePicker .react-date-picker__button__input {
-  margin-left: 0px;
-  min-width: inherit;
-  font-size: 0.85rem;
-}
-.algaeh-datePicker button {
-  margin-left: 0px;
-}
+  padding-left: 6px; }
+  .algaeh-datePicker .react-date-picker__button {
+    border: none;
+    line-height: 1.94em; }
+  .algaeh-datePicker .react-date-picker {
+    width: 100%; }
+  .algaeh-datePicker .react-date-picker__button {
+    width: 100%; }
+  .algaeh-datePicker .react-date-picker__button__input {
+    margin-left: 0px;
+    min-width: inherit;
+    font-size: 0.85rem; }
+  .algaeh-datePicker button {
+    margin-left: 0px; }
 
 .table {
   width: 100%;
-  border-bottom: 1.5px solid #f2f2f2;
-}
-.table tbody {
-  height: 200px;
-  overflow: auto;
-  width: 100%;
-}
-.table tbody tr {
-  cursor: pointer;
-}
-.table tbody td {
-  vertical-align: middle;
-  white-space: nowrap;
-  font-size: 0.75rem;
-  text-align: center;
-}
-.table thead tr td {
-  font-size: 0.75rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-}
+  border-bottom: 1.5px solid #f2f2f2; }
+  .table tbody {
+    height: 200px;
+    overflow: auto;
+    width: 100%; }
+  .table tbody tr {
+    cursor: pointer; }
+  .table tbody td {
+    vertical-align: middle;
+    white-space: nowrap;
+    font-size: 0.75rem;
+    text-align: center; }
+  .table thead tr td {
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center; }
 
 .scrolling table {
   table-layout: inherit;
   *margin-left: -100px;
-  /*ie7*/
-}
+  /*ie7*/ }
 
 .scrolling td,
 th {
   vertical-align: top;
   padding: 10px;
-  min-width: 100px;
-}
+  min-width: 100px; }
 
 .scrolling th {
   position: absolute;
   *position: relative;
   /*ie7*/
   left: 0;
-  width: 120px;
-}
+  width: 120px; }
 
 .outer {
-  position: relative;
-}
+  position: relative; }
 
 .inner {
   overflow-x: auto;
   overflow-y: visible;
-  margin-left: 120px;
-}
+  margin-left: 120px; }
